--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
-name = "vm-core"
+name = "maikor-vm-core"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Ray Britton <raybritton@pm.me>"]
+description = "VM for playing Maikor games"
+license-file = "LICENSE"
+repository = "https://github.com/raybritton/maikor-vm-core"
+readme = "README.md"
+homepage = "https://github.com/raybritton/rust-graphics-lib"
+keywords = ["game","gamedev","2d","vm"]
+categories = ["emulators","games"]
 
 [dependencies]
