Change license def in cargo, as crates couldn't support file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Ray Britton <raybritton@pm.me>"]
 description = "VM for playing Maikor games"
-license-file = "LICENSE"
+license = "MIT"
 repository = "https://github.com/raybritton/maikor-vm-core"
 readme = "README.md"
 homepage = "https://github.com/raybritton/rust-graphics-lib"
