--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "maikor-vm-core"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Ray Britton <raybritton@pm.me>"]
 description = "VM for playing Maikor games"
@@ -12,3 +12,4 @@ keywords = ["game","gamedev","2d","vm"]
 categories = ["games"]
 
 [dependencies]
+maikor-language = "0.1.3"
